--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@sjeremich23/pwa-utils",
-  "version": "1.2.4",
+  "version": "1.2.5",
+  "homepage": "https://github.com/shanejeremich/sjeremich23-pwa-utils",
   "main": "index.js",
   "module": "index.mjs",
   "author": "Shane Jeremich",
